<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="120dp"
    android:paddingHorizontal="20dp"
    android:gravity="center_vertical"
    android:orientation="vertical"
    android:layout_marginVertical="5dp"
    android:layout_marginHorizontal="10dp"
    android:background="@drawable/shape_item">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/title"
        android:theme="@style/titleStyle"
        android:id="@+id/txt_title"/>

    <TextView
        android:layout_below="@id/txt_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/date"
        android:theme="@style/dateStyle"
        android:id="@+id/txt_date"/>

    <TextView
        android:layout_below="@id/txt_date"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/txt_admin"
        android:theme="@style/descStyle"
        android:text="@string/admin"/>

    <TextView
        android:layout_below="@id/txt_admin"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/txt_user"
        android:theme="@style/descStyle"
        android:text="@string/user"/>

</RelativeLayout>