<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="120dp"
    android:paddingHorizontal="20dp"
    android:gravity="center_vertical"
    android:orientation="vertical"
    android:layout_marginVertical="5dp"
    android:layout_marginHorizontal="10dp"
    android:background="@drawable/shape_item">

    <TextView
        android:id="@+id/txt_title"
        android:maxLength="20"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/title"
        android:theme="@style/titleStyle" />

    <TextView
        android:id="@+id/txt_date"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/txt_title"
        android:text="@string/date"
        android:theme="@style/dateStyle" />

    <TextView
        android:id="@+id/txt_description"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:maxLength="30"
        android:layout_below="@id/txt_date"
        android:text="@string/description"
        android:theme="@style/descStyle" />

    <Button
        android:layout_width="30dp"
        android:layout_height="30dp"
        android:background="@drawable/ic_baseline_delete_24"
        android:layout_alignParentRight="true"
        android:id="@+id/btn_delete"/>

</RelativeLayout>