<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center"
    android:orientation="vertical"
    tools:context=".activity.LoginActivity">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/app_name"
        android:fontFamily="sans-serif-condensed"
        android:textStyle="bold"
        android:textSize="50dp"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Login"
        android:textSize="20dp"
        android:layout_marginBottom="20dp"/>

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:theme="@style/buttonStyle1"
        android:id="@+id/btn_login_user"
        android:paddingHorizontal="20dp"
        android:background="@drawable/shape_button_1"
        android:text="@string/userlogin"/>

    <Button
        android:layout_marginTop="10dp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:theme="@style/buttonStyle1"
        android:id="@+id/btn_login_admin"
        android:background="@drawable/shape_button_1"
        android:paddingHorizontal="20dp"
        android:text="@string/adminlogin"/>

</LinearLayout>