<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center_horizontal"
    android:orientation="vertical">

    <RelativeLayout
        android:id="@+id/header"
        android:layout_width="match_parent"
        android:layout_height="100dp"
        android:padding="20dp"
        android:gravity="center_horizontal"
        android:background="@drawable/shape_header">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/promo"
            android:theme="@style/nameStyle"/>

    </RelativeLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_above="@id/footer"
        android:layout_below="@id/header"
        android:orientation="vertical"
        android:padding="25dp">

        <TextView
            android:layout_gravity="right"
            android:id="@+id/txt_date"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/date"
            android:theme="@style/dateStyle" />

        <TextView
            android:id="@+id/txt_title"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="10dp"
            android:text="@string/title"
            android:theme="@style/titleStyle"
            android:textStyle="bold|italic"/>

        <TextView
            android:id="@+id/txt_description"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="20dp"
            android:layout_marginBottom="10dp"
            android:text="@string/description"
            android:theme="@style/descStyle" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center_vertical">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerVertical="true"
                android:text="@string/limit"
                android:textColor="@color/design_default_color_on_secondary"
                android:textSize="25sp"
                android:textStyle="bold|italic" />

            <TextView
                android:id="@+id/txt_limit"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/limit"
                android:layout_marginLeft="10dp"
                android:theme="@style/descStyle"/>

        </LinearLayout>

    </LinearLayout>

    <LinearLayout
        android:id="@+id/footer"
        android:layout_alignParentBottom="true"
        android:padding="20dp"
        android:gravity="end"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <com.google.android.material.floatingactionbutton.FloatingActionButton
            android:id="@+id/btn_showqr"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:backgroundTint="@color/design_default_color_secondary"
            android:src="@drawable/ic_baseline_qr_code_24" />

    </LinearLayout>

</RelativeLayout>